[tool.poetry]
name = "aula"
version = "0.1.0"
description = ""
authors = ["Seu Nome <email@email.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.12"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
